# chess-engine

./: .gitignore  README.md  pyproject.toml  requirements.txt
chess_engine_2/: __init__.py  annotate_values.py  benchmark.py  distill_rankings.py  encoding.py  engine.py  evaluate_checkpoint.py  evaluate_rankings.py  match.py  mcts.py  mcts_benchmark.py  neural.py  predict.py  puct_diagnostics.py  train.py  train_rankings.py  tune.py  uci.py  value_ranking.py
chess_engine_2/data/: __init__.py  dataset.py  download.py  pgn.py  remote_pgn.py
tests/: test_annotate_values.py  test_benchmark.py  test_data_download.py  test_data_pgn.py  test_dataset.py  test_distill_rankings.py  test_encoding.py  test_engine.py  test_evaluate_rankings.py  test_match.py  test_mcts.py  test_mcts_benchmark.py  test_neural.py  test_puct_diagnostics.py  test_remote_pgn.py  test_train_rankings.py  test_tune.py  test_uci.py  test_value_ranking.py
